--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">Ami</string>
     <string name="action_settings">Settings</string>
+    <string name="navigation_surrounds">Surrounds</string>
+    <string name="navigation_discover">Discover</string>
+    <string name="navigation_Matching">Matching</string>
+    <string name="navigation_Chats">Chats</string>
+    <string name="navigation_Profile">Profile</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
